; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/t/extr_ptlsbench.c_bench_mbps.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/t/extr_ptlsbench.c_bench_mbps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i64, i64, i64)* @bench_mbps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @bench_mbps(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca double, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = uitofp i64 %8 to double
  store double %9, double* %7, align 8
  %10 = load i64, i64* %6, align 8
  %11 = uitofp i64 %10 to double
  %12 = load double, double* %7, align 8
  %13 = fmul double %12, %11
  store double %13, double* %7, align 8
  %14 = load double, double* %7, align 8
  %15 = fmul double %14, 8.000000e+00
  store double %15, double* %7, align 8
  %16 = load i64, i64* %4, align 8
  %17 = sitofp i64 %16 to double
  %18 = load double, double* %7, align 8
  %19 = fdiv double %18, %17
  store double %19, double* %7, align 8
  %20 = load double, double* %7, align 8
  ret double %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
